# IES

./: README.md
Lab01/: README.md
Lab01/WeatherForecast/: pom.xml
Lab02/: README.md
Lab02/EmbeddedJettyExample/: pom.xml
Lab02/Ex3/Ex3/: pom.xml
Lab02/JakartaWebStarter/: docker-compose.yml  pom.xml
Lab02/SpringBoot/: pom.xml
Lab02/quoteAPI/: pom.xml
Lab02/quoteAPI/src/main/resources/: application.properties
Lab02/serving-web-content/: pom.xml
Lab02/serving-web-content/src/main/resources/: application.properties
Lab03/demo/: pom.xml
Lab03/employeeManagement/: pom.xml
Lab03/employeeManagement/src/main/resources/: application.properties
Lab03/quotes/: Dockerfile  docker-compose.yml  pom.xml
Lab04/: README.md
Lab04/Ex1/: package-lock.json
Lab04/Ex2/: package-lock.json  package.json
Lab04/Ex2/src/: App.css  App.jsx
Lab04/Ex3/: package-lock.json
Lab04/Ex3/src/: App.jsx
Lab04/Ex4/: package-lock.json  package.json
Lab04/Ex4/src/: App.jsx
Lab04/Ex4/src/services/: api.js
Lab04/composetest/: app.py  compose.yaml
Lab05/: README.md
Lab05/AnyCityForecast/: Dockerfile  dependency-reduced-pom.xml  pom.xml
Lab05/AnyCityForecast/src/main/java/: AnyCityForecast.java
Lab05/IpmaApiClient/: pom.xml
Lab05/IpmaApiClient/src/main/java/: IpmaApiClient.java  IpmaCityForecast.java
Lab05/kafka/: docker-compose.yml  pom.xml
Lab05/kafka-spring/: pom.xml
Lab05/lab5_kafka/: pyproject.toml
Lab05/lab5_kafka/lab5_kafka/: consumer_example.py  producer_example.py
Lab05/lab5_kafka/tests/: test_lab5_kafka.py
(+49 files in other folders)
